--- a/ADM/app/scss/style.scss
+++ b/ADM/app/scss/style.scss
@@ -158,11 +158,18 @@ body {
 
 
 .slider-conteiner {
-   overflow-x: hidden;
+   position: relative;
+   overflow: hidden;
    margin-bottom: 93px;
 }
 .swiper-item {
    height: 465px;
+   &-img {
+      height: 100%;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+   }
 }
 .swiper-arrows {
    position: relative;
@@ -200,7 +207,7 @@ body {
 .text-box {
    position: absolute;
    padding: 38px 37px 22px 54px;
-   top: 200px;
+   top: 115px;
    left: 65px;
    max-width: 591px;
    text-align: justify;
@@ -450,6 +457,17 @@ body {
       justify-self: center;
       justify-content: space-between;
       height: 100px;
+      & a {
+         display: block;
+      }
+      &-content {
+         &-big {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100px;
+         }
+      }
    }
    &__phone {
       font-size: 18px;
@@ -467,10 +485,39 @@ body {
       font-weight: 300;
       color: #000000;
    }
+   &__socials {
+      &-list {
+         padding: 0;
+      }
+      &-pnt {
+         display: inline-block;
+      }
+      a {
+         width: 24px;
+         height: 24px;
+         background-image: url(../images/ikonki_sotssetey_aktivnye_3804.png);
+         & + a {
+            margin-right: 7px;
+         }
+      }
+      &-facebook {
+         background-position: 0px 0px;
+      }
+      &-vk {
+         background-position: -30px 0px;
+      }
+      &-odnoklassniki {
+         background-position: -60px 0px;
+      }
+      &-youtube {
+         background-position: -90px 0px;
+      }
+      &-instagram {
+         background-position: -120px 0px;
+      }
+   }
 }
-.footer__item a {
-   display: block;
-}
+
 .footer__link:first-child,
 .footer__phone:first-child {
    margin-bottom: 12px;
@@ -508,21 +555,34 @@ body {
       }
    }
    .text-box {
+      top: 140px;
+      left: 40px;
       &__title {
-         font-size: 25px;
+         font-size: 23px;
       }
       &__text {
          font-size: 18px;
       }
    }
-   .paragraph__descr {
-      font-size: 16px;
+   .paragraph {
+      &__inner {
+         margin-bottom: 50px;
+      }
+      &__descr {
+         font-size: 16px;
+      }
+   }
+   .benefits__image {
+      height: 80px;
    }
    .paragraph__title,
    .production__title,
    .benefits__title,
    .customers__title {
       font-size: 28px;
+   }
+   .customers__title {
+      margin-bottom: 50px;
    }
    .footer__phone,
    .footer__link {
@@ -531,6 +591,37 @@ body {
 }
 
 @media (max-width: 823px) {
+   .header__nav-link--contacts {
+      padding: 8px 20px;
+   }
+   .header__phone {
+      font-size: 14px;
+   }
+   .header__nav-link {
+      font-size: 12px;
+   }
+   .text-box__title {
+      font-size: 22px;
+   }
+   .swiper-item {
+      height: 400px;
+   }
+   .swiper-arrows {
+      position: relative;
+      bottom: 195px;
+   }
+   .text-box {
+      top: 110px;
+      &__title {
+         font-size: 20px;
+      }
+      &__text {
+         font-size: 16px;
+      }
+   }
+   .paragraph__descr {
+      font-size: 14px;
+   }
    .production__inner {
       grid-gap: 25px 18px;
    }
@@ -551,10 +642,192 @@ body {
          font-size: 16px;
       }
    }
+   .paragraph__title,
+   .production__title,
+   .benefits__title,
+   .customers__title {
+      font-size: 26px;
+   }
+   .benefits__image {
+      height: 75px;
+   }
+   .benefits__text {
+      font-size: 13px;
+   }
    .production__item-btn {
       padding: 7px 25px;
       font-size: 13px;
    }
+   .customers__item-img {
+      max-height: 65px;
+   }
+   .customers-button-next::after,
+   .customers-button-prev::after,
+   .slider-button-next::after,
+   .slider-button-prev::after {
+      font-size: 30px;
+   }
+   .customers-arrows, 
+   .customers-button-next, 
+   .customers-button-prev {
+      top: 140px;
+   }
+   .swiper-pagination {
+      bottom: -60px !important;
+   }
+   .paragraph__inner {
+      margin-bottom: 45px;
+   }
+   .footer__phone,
+   .footer__link {
+      font-size: 12px;
+   }
 }
 
+@media (max-width: 768px) {
+   .logotype__link {
+      font-size: 22px;
+   }
+   .nav-menu {
+      top: 72px;
+      &__list {
+         padding: 15px;
+      }
+      &__pnt {
+         margin-bottom: 13px;
+      }
+      &__link {
+         font-size: 12px;
+      }
+   }
+   
+   .header__nav-link {
+      font-size: 11px;
+   }
+   .header__nav-link--contacts {
+      padding: 6px 12px;
+   }
+   .header__phone {
+      font-size: 13px;
+   }
+   .swiper-item {
+      height: 370px;
+   }
+   .text-box {
+      padding: 30px 20px 20px 30px;
+      &__text {
+         font-size: 14px;
+      }
+   }
+   .customers-button-next::after,
+   .customers-button-prev::after,
+   .slider-button-next::after,
+   .slider-button-prev::after {
+      font-size: 23px;
+   }
+   .paragraph__descr {
+      font-size: 13px;
+   }
+   .production__item-title--3 {
+      font-size: 15px;
+      margin-bottom: 36px;
+   }
+   .benefits__image {
+      height: 65px;
+   }
+   .benefits__text {
+      font-size: 11px;
+   }
+   .benefits__inner {
+      margin-bottom: 80px;
+   }
+   .customers__title {
+      margin-bottom: 40px;
+   }
+   .footer__phone, .footer__link {
+      font-size: 11px;
+   }
+   .customers-arrows, 
+   .customers-button-next, 
+   .customers-button-prev {
+      top: 130px;
+   }
+}
 
+@media (max-width: 736px) {
+   .nav-menu__list {
+      width: 300px;
+   }
+   .header__nav-item {
+      height: 70px;
+   }
+   .header__nav-item--middle {
+      margin: 0 35px;
+   }
+   .text-box__title {
+      font-size: 18px;
+   }
+   .text-box__text {
+      font-size: 12px;
+   }
+   .customers__item-img {
+      max-width: 110px;
+   }
+   .benefits__image {
+      height: 60px;
+   }
+   .production__item-title--3 {
+      margin-bottom: 25px;
+   }
+   .paragraph__title, 
+   .production__title, 
+   .benefits__title, 
+   .customers__title {
+      font-size: 20px;
+   }
+}
+
+@media (max-width: 700px) {
+   .header__nav-item--middle {
+      margin: 0 25px;
+   }
+   .nav-menu {
+      top: 67px;
+   }
+   .footer__privacy,
+   .logotype__descr {
+      font-size: 10px;
+   }
+   .customers__item-img {
+      max-width: 100px;
+   }
+   .customers__title {
+      margin-bottom: 30px;
+   }
+   .benefits__image {
+      height: 50px;
+   }
+}
+
+@media (max-width: 667px) {
+   .header__nav-link {
+      font-size: 10px;
+   }
+   .header__phone {
+      font-size: 11px;
+   }
+   .slider-conteiner {
+      margin-bottom: 60px;
+   }
+   .text-box {
+      padding: 25px 15px 20px 25px;
+      left: 30px;
+      max-width: 463px;
+   }
+   .slider-conteiner {
+      margin-bottom: 80px;
+   }
+   .benefits__item {
+      max-width: 157px;
+   }
+}
