--- a/ADM/app/scss/style.scss
+++ b/ADM/app/scss/style.scss
@@ -50,7 +50,7 @@ body {
    max-width: 1200px;
    padding: 0 30px;
    margin: 0 auto;
-   background-color: rgb(195, 211, 240);
+   background-color: #fff;
 }
 
 .header {
@@ -99,6 +99,9 @@ body {
       font-weight: 700;
       text-transform: uppercase;
       color: #000000;
+   }
+   &__burger {
+      display: none;
    }
 }
 
@@ -404,6 +407,10 @@ body {
       overflow-x: hidden;
       text-align: center;
    }
+   &__inner {
+      position: relative;
+      margin-bottom: 50px;
+   }
    &__title {
       margin-bottom: 70px;
       font-size: 30px;
@@ -416,15 +423,9 @@ body {
       align-items: center;
       justify-items: center;
    }
-}
-
-.customers__inner {
-   position: relative;
-   margin-bottom: 50px;
-}
-
-.customers-arrows {
-   display: contents;
+   &__arrows {
+      display: contents;
+   }
 }
 
 .customers-button-next {
@@ -435,12 +436,12 @@ body {
    left: -15px;
 }
 
-.customers-arrows,
 .customers-button-next,
 .customers-button-prev {
    position: absolute;
-   top: 150px;
+   top: 160px;
 }
+
 
 
 .footer {
@@ -524,6 +525,10 @@ body {
 }
 
 
+
+//  media
+
+
 @media (max-width: 1024px) {
    .production__box--2 {
       grid-template-columns: 66% 32.5%;
@@ -533,6 +538,15 @@ body {
 @media (max-width: 992px) {
    .production__box--2 {
       grid-template-columns: 66% 32%;
+   }
+   .paragraph__title,
+   .production__title,
+   .benefits__title,
+   .customers__title {
+      font-size: 32px;
+   }
+   .benefits__image {
+      height: 90px;
    }
 }
 
@@ -581,8 +595,22 @@ body {
    .customers__title {
       font-size: 28px;
    }
-   .customers__title {
-      margin-bottom: 50px;
+   .customers-button-next::after,
+   .customers-button-prev::after,
+   .slider-button-next::after,
+   .slider-button-prev::after {
+      font-size: 25px;
+   }
+   .customers {
+      &__title {
+         margin-bottom: 50px;
+      }
+      &__button {
+         top: 143px;
+      }
+      &__item-img {
+         max-height: 75px;
+      }
    }
    .footer__phone,
    .footer__link {
@@ -658,25 +686,25 @@ body {
       padding: 7px 25px;
       font-size: 13px;
    }
-   .customers__item-img {
-      max-height: 65px;
-   }
-   .customers-button-next::after,
-   .customers-button-prev::after,
-   .slider-button-next::after,
-   .slider-button-prev::after {
-      font-size: 30px;
-   }
-   .customers-arrows, 
-   .customers-button-next, 
-   .customers-button-prev {
-      top: 140px;
-   }
    .swiper-pagination {
       bottom: -60px !important;
    }
    .paragraph__inner {
       margin-bottom: 45px;
+   }
+   .customers {
+      &__item-img {
+         max-height: 65px;
+      }
+      &__button {
+         top: 140px;
+      }
+   }
+   .customers-button-next {
+      right: -25px;
+   }
+   .customers-button-prev {
+      left: -25px;
    }
    .footer__phone,
    .footer__link {
@@ -685,6 +713,96 @@ body {
 }
 
 @media (max-width: 768px) {
+   .header {
+      &__burger {
+         display: block;
+         position: relative;
+         width: 30px;
+         height: 20px;
+         order: 2;
+         z-index: 3;
+         span {
+            position: absolute;
+            background-color: #00aeef;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            top: 9px;
+            transition: all 0.3s ease 0s;
+         }
+         &:before, :after {
+            content: '';
+            background-color: #00aeef;
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            left: 0;
+            transition: all 0.3s ease 0s;
+         }
+         &::after {
+            content: '';
+            background-color: #00aeef;
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            left: 0;
+            transition: all 0.3s ease 0s;
+         }
+         &::before {
+            top: 0;
+         }
+         &::after {
+            bottom: 0;
+         }
+         &.active {
+            span {
+               transform: scale(0);
+            }
+            &::before {
+               transform:rotate(45deg);
+               top: 9px;
+            }
+            &::after {
+               transform:rotate(-45deg);
+               bottom: 9px;
+            }
+         }
+      }
+      &__nav {
+         position: absolute;
+         transform: translateX(300px);
+         width: 100%;
+         top: 65px;
+         transition: all 0.5s ease 0s;
+         background-color: lavender;
+         z-index: 2;
+         opacity: 0;
+         visibility: hidden;
+         &.active {
+            transform: translateX(-30px);
+            opacity: 1;
+            visibility: visible;
+         }
+         &-item {
+            height: 30px;
+            margin: 0;
+         }
+         &-list {
+            display: flex;
+            justify-content: space-around;
+            margin: 10px 0;
+         }
+      }
+      
+   }
+   
+   .header__nav-link--contacts {
+      background-color: inherit;
+      color: #000;
+      border: none;
+      border-radius: 0;
+      padding: 0;
+   }
    .logotype__link {
       font-size: 22px;
    }
@@ -700,12 +818,8 @@ body {
          font-size: 12px;
       }
    }
-   
    .header__nav-link {
       font-size: 11px;
-   }
-   .header__nav-link--contacts {
-      padding: 6px 12px;
    }
    .header__phone {
       font-size: 13px;
@@ -741,16 +855,16 @@ body {
    .benefits__inner {
       margin-bottom: 80px;
    }
-   .customers__title {
-      margin-bottom: 40px;
+   .customers {
+      &__title {
+         margin-bottom: 40px;
+      }
+      &__button {
+         top: 130px;
+      }
    }
    .footer__phone, .footer__link {
       font-size: 11px;
-   }
-   .customers-arrows, 
-   .customers-button-next, 
-   .customers-button-prev {
-      top: 130px;
    }
 }
 
@@ -770,9 +884,6 @@ body {
    .text-box__text {
       font-size: 12px;
    }
-   .customers__item-img {
-      max-width: 110px;
-   }
    .benefits__image {
       height: 60px;
    }
@@ -785,6 +896,12 @@ body {
    .customers__title {
       font-size: 20px;
    }
+   .customers__item-img {
+      max-width: 110px;
+   }
+   .customers__button {
+      top: 125px;
+   }
 }
 
 @media (max-width: 700px) {
@@ -793,6 +910,9 @@ body {
    }
    .nav-menu {
       top: 67px;
+   }
+   .swiper-arrows {
+      bottom: 180px;
    }
    .footer__privacy,
    .logotype__descr {
@@ -829,5 +949,11 @@ body {
    }
    .benefits__item {
       max-width: 157px;
+   }
+   .first-slider-arrows {
+      bottom: 170px;
+   }
+   .customers__button {
+      top: 115px;
    }
 }
