--- a/ADM/app/scss/style.scss
+++ b/ADM/app/scss/style.scss
@@ -51,7 +51,6 @@ body {
    max-width: 1200px;
    padding: 0 30px;
    margin: 0 auto;
-   background-color: #fff;
    overflow-x: hidden;
 }
 
@@ -61,6 +60,7 @@ body {
       justify-content: space-between;
       align-items: center;
       height: 85px;
+      overflow: hidden;
       z-index: 4;
    }
    &__nav {
@@ -333,6 +333,10 @@ body {
          &--4 {
             margin-top: 28px;
          }
+         &--5 {
+            font-size: 20px;
+            color: #fff;
+         }
       }
       &-btn {
          padding: 8px 35px;
@@ -368,7 +372,7 @@ body {
    &__background {
       position: absolute;
       width: 100%;
-      height: 99%;
+      height: 100%;
       top: 0;
       bottom: 0;
       z-index: 2;
@@ -451,15 +455,15 @@ body {
    &__inner {
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
-      height: 180px;
       align-content: center;
+      padding-top: 55px;
+      padding-bottom: 30px;
    }
    &__item {
       display: flex;
       flex-direction: column;
       justify-self: center;
       justify-content: space-between;
-      height: 100px;
       & a {
          display: block;
       }
@@ -491,6 +495,7 @@ body {
    &__socials {
       &-list {
          padding: 0;
+         margin: 0;
       }
       &-pnt {
          display: inline-block;
@@ -520,7 +525,9 @@ body {
       }
    }
 }
-
+.footer-logotype__link {
+   line-height: 1;
+}
 .footer__link:first-child,
 .footer__phone:first-child {
    margin-bottom: 12px;
@@ -547,8 +554,15 @@ body {
    .customers__title {
       font-size: 32px;
    }
+   .paragraph__inner {
+      margin-bottom: 40px;
+   }
    .benefits__image {
       height: 90px;
+   }
+   .footer__inner {
+      padding-top: 40px;
+      padding-bottom: 25px;
    }
 }
 
@@ -614,6 +628,9 @@ body {
          max-height: 75px;
       }
    }
+   .footer__inner {
+      padding-top: 30px;
+   }
    .footer__phone,
    .footer__link {
       font-size: 14px;
@@ -639,6 +656,9 @@ body {
    .swiper-arrows {
       position: relative;
       bottom: 195px;
+   }
+   .slider-conteiner {
+      margin-bottom: 70px;
    }
    .text-box {
       top: 110px;
@@ -667,9 +687,13 @@ body {
       }
       &--3 {
          font-size: 17px;
+         margin-bottom: 28px;
       }
       &--4 {
          font-size: 16px;
+      }
+      &--5 {
+         margin-bottom: 16px;
       }
    }
    .paragraph__title,
@@ -716,6 +740,7 @@ body {
 
 @media (max-width: 768px) {
    .header {
+      position: relative;
       &__burger {
          display: block;
          position: relative;
@@ -786,7 +811,7 @@ body {
             visibility: visible;
          }
          &-item {
-            height: 30px;
+            height: 20px;
             margin: 0;
          }
          &-list {
@@ -809,7 +834,7 @@ body {
       font-size: 22px;
    }
    .nav-menu {
-      top: 72px;
+      top: 31px;
       &__list {
          padding: 15px;
       }
@@ -829,11 +854,27 @@ body {
    .swiper-item {
       height: 370px;
    }
+   .swiper-pagination {
+      bottom: -23px !important;
+   }
+   .slider-conteiner {
+      margin-bottom: 60px;
+   }
    .text-box {
-      padding: 30px 20px 20px 30px;
-      &__text {
-         font-size: 14px;
+      top: 225px;
+      padding: 15px 15px 15px 30px;
+      &__title {
+         font-size: 18px;
       }
+      &__text {
+         font-size: 12px;
+      }
+   }
+   .paragraph__title,
+   .production__title,
+   .benefits__title,
+   .customers__title {
+      font-size: 26px;
    }
    .customers-button-next::after,
    .customers-button-prev::after,
@@ -844,18 +885,23 @@ body {
    .paragraph__descr {
       font-size: 13px;
    }
+   .production__inner {
+      margin-bottom: 70px;
+   }
    .production__item-title--3 {
       font-size: 15px;
       margin-bottom: 36px;
    }
-   .benefits__image {
-      height: 65px;
-   }
-   .benefits__text {
-      font-size: 11px;
-   }
-   .benefits__inner {
-      margin-bottom: 80px;
+   .benefits {
+      &__inner {
+         margin-bottom: 70px;
+      }
+      &__image {
+         height: 60px;
+      }
+      &__text {
+         font-size: 11px;
+      }
    }
    .customers {
       &__title {
@@ -863,6 +909,10 @@ body {
       }
       &__button {
          top: 130px;
+      }
+      &__item-img {
+         max-height: 60px;
+         max-width: 105px;
       }
    }
    .footer__phone, .footer__link {
@@ -874,23 +924,27 @@ body {
    .nav-menu__list {
       width: 300px;
    }
-   .header__nav-item {
-      height: 70px;
-   }
    .header__nav-item--middle {
       margin: 0 35px;
    }
-   .text-box__title {
-      font-size: 18px;
+   .swiper-pagination {
+      bottom: 100px !important;
    }
-   .text-box__text {
-      font-size: 12px;
+   .text-box {
+      top: 255px;
+      &__title {
+         font-size: 18px;
+      }
+      &__text {
+         font-size: 12px;
+         line-height: 1.5;
+      }
    }
    .benefits__image {
       height: 60px;
    }
    .production__item-title--3 {
-      margin-bottom: 25px;
+      margin-bottom: 38px;
    }
    .paragraph__title, 
    .production__title, 
@@ -898,11 +952,16 @@ body {
    .customers__title {
       font-size: 20px;
    }
-   .customers__item-img {
-      max-width: 110px;
-   }
-   .customers__button {
-      top: 125px;
+   .customers {
+      &__title {
+         margin-bottom: 30px;
+      }
+      &__item-img {
+         max-width: 110px;
+      }
+      &__button {
+         top: 125px;
+      }
    }
 }
 
@@ -911,7 +970,7 @@ body {
       margin: 0 25px;
    }
    .nav-menu {
-      top: 67px;
+      top: 30px;
    }
    .swiper-arrows {
       bottom: 180px;
@@ -932,30 +991,227 @@ body {
 }
 
 @media (max-width: 667px) {
+   .container {
+      padding: 0 10px;
+   }
+   .header__nav.active {
+      transform: translateX(-10px);
+   }
    .header__nav-link {
       font-size: 10px;
    }
    .header__phone {
       font-size: 11px;
    }
-   .slider-conteiner {
-      margin-bottom: 60px;
+   .header__nav-item {
+      height: 30px;
+   }
+   .swiper-pagination {
+      bottom: 117px !important;
+   }
+   .nav-menu {
+      top: 40px;
    }
    .text-box {
-      padding: 25px 15px 20px 25px;
       left: 30px;
       max-width: 463px;
    }
    .slider-conteiner {
-      margin-bottom: 80px;
-   }
-   .benefits__item {
-      max-width: 157px;
+      margin-bottom: 50px;
    }
    .first-slider-arrows {
       bottom: 170px;
    }
+   .benefits__inner {
+      margin-bottom: 70px;
+   }
+   .benefits__item {
+      max-width: 157px;
+   }
+   .production__item-title {
+      &--2 {
+         font-size: 15px;
+      }
+      &--3 {
+         margin-bottom: 35px;
+      }
+      &--4 {
+         font-size: 14px;
+         margin-top: 30px;
+      }
+      &--5 {
+         font-size: 18px;
+      }
+   }
+   .customers__item-img {
+      max-height: 70px;
+      max-width: 115px;
+   }
+   .customers-button-next {
+      right: -10px;
+   }
+   .customers-button-prev {
+      left: -10px;
+   }
    .customers__button {
       top: 115px;
    }
+   .footer__phone, .footer__link {
+      font-size: 10px;
+   }
+}
+
+@media (max-width: 650px) {
+   .customers-button-next {
+      right: -10px;
+   }
+   .customers-button-prev {
+      left: -10px;
+   }
+}
+
+@media (max-width: 600px) {
+   .production {
+      &__inner {
+         margin-bottom: 60px;
+         grid-gap: 20px 18px;
+      }
+      &__box {
+         grid-gap: 15px;
+         &--2 {
+            grid-template-columns: 66% 31%;
+         }
+      }
+      &__item {
+         height: 227px;
+         &-content {
+            &--3 {
+               top: 112px;
+            }
+            &--4 {
+               top: 132px;
+            }
+         }
+         &--btn {
+            padding: 5px 17px;
+         }
+      }
+      &__image {
+         height: 130px;
+         &-img {
+            height: 130px;
+            &--2 {
+               height: 227px;
+            }
+            &--3 {
+               height: 227px;
+            }
+         }
+      }
+   }
+
+   .production__item-title {
+      &--1 {
+         font-size: 13px;
+         margin-bottom: 15px;
+      }
+      &--2 {
+         font-size: 14px;
+         margin-bottom: 20px;
+      }
+      &--3 {
+         font-size: 14px;
+         margin-bottom: 13px;
+      }
+      &--4 {
+         margin-top: 25px;
+      }
+   }
+   .customers__item-img {
+      max-height: 70px;
+      max-width: 100px;
+   }
+}
+
+@media (max-width: 568px) {
+   .production {
+      &__title {
+         margin-bottom: 35px;
+      }
+      &__box {
+         grid-template: none;
+         justify-items: center;
+         &--2 {
+            grid-template-columns: 1fr 1fr;
+            grid-template: none;
+         }
+      }
+      &__item {
+         width: 50%;
+         &-content--3 {
+            top: 95px;
+         }
+         &-content--4 {
+            top: 112px;
+         }
+         &-title--1 {
+            font-size: 15px;
+            margin-bottom: 12px;
+            margin-top: 10px;
+         }
+         &-title--2 {
+            font-size: 16px;
+            margin-bottom: 16px;
+         }
+         &-title--3 {
+            font-size: 16px;
+            margin-bottom: 18px;
+         }
+         &-title--4 {
+            font-size: 16px;
+            margin-top: 20px;
+         }
+         &-title--5 {
+            font-size: 16px;
+         }
+      }
+   }
+   .footer__inner {
+      padding: 15px 0;
+   }
+}
+
+@media (max-width: 533px) {
+   .benefits {
+      &__inner {
+         margin-bottom: 50px;
+      }
+      &__row {
+         flex-wrap: wrap;
+         justify-content: space-around;
+         max-width: 460px;
+         margin: 0 auto;
+      }
+      &__item {
+         margin-bottom: 20px;
+      }
+      &__text {
+         font-size: 13px;
+      }
+   }
+   .footer {
+      &__inner {
+         grid-template-columns: 1fr 1fr;
+         grid-gap: 15px;
+      }
+      &__item {
+         &--1 {
+            order: 1;
+         }
+         &--2 {
+            order: 2;
+         }
+      }
+   }
+   
 }
